# learning-cmake

curl/src/: CMakeLists.txt
hello-world-lib/src/: CMakeLists.txt
hello-world-shared/src/: CMakeLists.txt
